avoid zoom inside input on mobile and ajust modale

--- a/public/css/components/modale.css
+++ b/public/css/components/modale.css
@@ -24,14 +24,14 @@
 
 .modale-small{
     margin-top: 30vh;
-    width: clamp(400px, 40%, 600px);
+    width: clamp(320px, 40%, 600px);
     align-items: center;
     gap: 1rem;
 }
 
 .modale-large {
     margin-top: 10vh;
-    width: clamp(400px, 60%, 800px);
+    width: 320px, 60%, 800px;
     gap: 2rem;
 }
 
